--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,8 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
+    <!-- <div class="m-2"><img src="https://www.prologis.com/themes/custom/prologis/favicons/android-chrome-256x256.png" ></div> -->
+    
     <a class="navbar-brand js-scroll-trigger" href="http://localhost/sotl6/index.php">SOTL6</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
