--- a/navbar.html
+++ b/navbar.html
@@ -33,7 +33,7 @@
         </li>
        
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="index.php#venue">Venue</a>
+          <a class="nav-link js-scroll-trigger" href="index.php#contact">Venue</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="index.php#contact">Contact</a>
