--- a/navbar.html
+++ b/navbar.html
@@ -18,18 +18,21 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="registration.php">Registration</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="#">Program<span class="caret"></span></a>
-          <ul class="dropdown-menu">
+        <!-- <li class="nav-item dropdown">
+          <a class="dropdown-toggle nav-link " data-toggle="dropdown" href="index.php#program">Program<span class="caret"></span></a>
+           <ul class="dropdown-menu">
             <li><a href="#portfolio">Sessions</a></li>
             <li><a href="#">schedule</a></li>
           </ul>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="index.php#program">Program</a>
         </li>
         <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.php#sessions">Sessions</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="index.php#lecturer">Lecturer</a>
+          <a class="nav-link js-scroll-trigger" href="index.php#keynote">Keynote</a>
         </li>
        
         <li class="nav-item">
