--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,4 @@
 <!-- Footer -->
-
 <footer class="footer">
   <div class="container">
     <div class="row align-items-center">
@@ -38,7 +37,7 @@
       </div>
       <div class="col-md-4 footer-align">
         <h5>ติดต่อ</h5>
-        <p><i class="fas fa-map-marker-alt"></i> &nbsp; สถาบันนวัตกรรมการเรียนรู้
+        <p><a href="https://il.mahidol.ac.th/th/"><i class="fas fa-map-marker-alt"></i> &nbsp; สถาบันนวัตกรรมการเรียนรู้</a>
           </br> เลขที่ 999 ถ.พุทธมณฑลสาย
           4 ต.ศาลายา </br>อ. พุทธมณฑล
           จ.นครปฐม 73170
@@ -67,11 +66,11 @@
   </div>
 
   <!-- tooltip -->
-  <script>
+  <!-- <script>
     $(document).ready(function(){
       $('[data-toggle="tooltip"]').tooltip();   
     });
-  </script>
+  </script> -->
 
   <!-- FB chat -->
   <!-- Load Facebook SDK for JavaScript -->
