--- a/navbar.html
+++ b/navbar.html
@@ -1,10 +1,13 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+  <div>
+    <a class="navbar-brand" href="https://il.mahidol.ac.th/th/"><i class="fas fa-home"></i> IL</a>
+    <!-- <a style="float: right;" href="" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a> -->
+  </div>
   <div class="container">
-    <!-- <div class="m-2"><img src="https://www.prologis.com/themes/custom/prologis/favicons/android-chrome-256x256.png" ></div> -->
-    
     <!-- <a class="navbar-brand js-scroll-trigger" href="http://localhost/sotl6/index.php">SOTL6</a> -->
-    <a class="navbar-brand js-scroll-trigger logo-size" href="http://localhost/sotl6/index.php"><img class="mx-auto"  style="width: 30%; height: auto;  filter: contrast(2); " src="img/logos/logo2.png" alt=""></a>
+    <a class="navbar-brand js-scroll-trigger logo-size" href="http://localhost/sotl6/index.php"><img class="mx-auto"
+        style="width: 30%; height: auto;  filter: contrast(2); " src="img/logos/logo2.png" alt=""></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -30,12 +33,12 @@
           <a class="nav-link js-scroll-trigger" href="program.php">Program</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="workshop.php">Workshop</a>
-          </li>
+          <a class="nav-link js-scroll-trigger" href="workshop.php">Workshop</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="keynote.php">Keynote</a>
         </li>
-       
+
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="index.php#contact">Venue</a>
         </li>
