--- a/navbar.html
+++ b/navbar.html
@@ -40,7 +40,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="index.php#contact">Venue</a>
+          <a class="nav-link js-scroll-trigger" href="venue.php">Venue</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="contact.php">Contact</a>
